--- a/app/src/main/res/layout/fragment_switch_control.xml
+++ b/app/src/main/res/layout/fragment_switch_control.xml
@@ -95,7 +95,7 @@
             android:id="@+id/button_add_room"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
+            android:layout_gravity="bottom|center"
             android:layout_margin="16dp"
             app:srcCompat="@drawable/ic_plus_24px"
             android:backgroundTint="@color/secondaryDarkColor"
