--- a/app/src/main/res/layout/fragment_switch_edit_room.xml
+++ b/app/src/main/res/layout/fragment_switch_edit_room.xml
@@ -94,6 +94,27 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editRoom_set_dim_level_key"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:ems="10"
+                android:inputType="text"
+                android:hint="@string/set_dimming_level_hint"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:layout_constraintTop_toBottomOf="@id/editRoom_turnoff_key" >
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@={viewModel.setLevelKey}"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editRoom_webhook"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -106,7 +127,7 @@
                 android:hint="@string/add_webhook_key_hint"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/editRoom_turnoff_key" >
+                app:layout_constraintTop_toBottomOf="@id/editRoom_set_dim_level_key" >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
