--- a/app/src/main/res/layout/fragment_switch_edit_room.xml
+++ b/app/src/main/res/layout/fragment_switch_edit_room.xml
@@ -17,17 +17,29 @@
             android:layout_height="match_parent"
             tools:context=".switcheditroom.SwitchEditRoomFragment">
 
-            <!-- TODO: Update blank fragment layout -->
             <TextView
                 android:id="@+id/edit_room_title"
+                style="@style/TextAppearance.MaterialComponents.Headline4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:text="@string/edit_room_title_string"
-                style="@style/TextAppearance.MaterialComponents.Headline4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/delete_room_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/primaryLightColor"
+                android:layout_marginEnd="16dp"
+                app:borderWidth="0dp"
+                app:fabSize="mini"
+                app:layout_constraintBottom_toBottomOf="@+id/edit_room_title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:srcCompat="@drawable/ic_delete_icon"
+                android:onClick="@{(view)->viewModel.onDeleteClicked(view)}"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/editRoom_roomname"
@@ -159,6 +171,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/editRoom_webhook"
                 android:onClick="@{(view) -> viewModel.onValidateClicked(view)}"/>
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
