--- a/app/src/main/res/layout/list_item_room_control.xml
+++ b/app/src/main/res/layout/list_item_room_control.xml
@@ -90,7 +90,7 @@
                 android:value="0"
                 android:valueFrom="0"
                 android:valueTo="100"
-                app:haloColor="@color/secondaryDarkColor"
+                app:haloRadius="0dp"
                 app:labelBehavior="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/button_turn_on_list"
