Rename App Spark Director and update package name

--- a/app/src/main/res/layout/fragment_switch_add_room.xml
+++ b/app/src/main/res/layout/fragment_switch_add_room.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.caseytmorris.orroifttt.switchaddroom.SwitchAddRoomViewModel" />
+            type="com.caseytmorris.sparkdirector.switchaddroom.SwitchAddRoomViewModel" />
     </data>
 
     <ScrollView
