--- a/app/src/main/res/layout/fragment_switch_edit_room.xml
+++ b/app/src/main/res/layout/fragment_switch_edit_room.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.caseytmorris.orroifttt.switcheditroom.SwitchEditRoomViewModel" />
+            type="com.caseytmorris.sparkdirector.switcheditroom.SwitchEditRoomViewModel" />
     </data>
 
     <ScrollView
