--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -1,7 +1,7 @@
 .center-image
 {
-    margin: 0 auto;
-    display: block;
+	margin: 0 auto;
+	display: block;
 }
 
 .app_screenshot
@@ -15,5 +15,20 @@
 
 .web_screenshot
 {
+	margin: 0 auto;
+	display: block;
 	height: 300px;
+}
+
+a.button {
+    appearance: button;
+    text-decoration: none;
+    background-color: #c79a00;
+	border-radius: 56px;
+	border:1px solid #c79a00;
+	color: #000000;
+	font-family: Arial;
+	font-size: 34px;
+	padding: 16px 31px;
+	cursor: pointer;
 }
