--- a/app/src/main/res/menu/overflow_menu.xml
+++ b/app/src/main/res/menu/overflow_menu.xml
@@ -3,5 +3,5 @@
 
     <item
         android:id="@+id/setupFragment"
-        android:title="Setup Instructions" />
+        android:title="@string/room_setup_title" />
 </menu>
