Use Firebase as the database. Able to add and edit rooms and still control the lights. Some hardcoded values remain for now

--- a/app/src/main/res/layout/list_item_room_control.xml
+++ b/app/src/main/res/layout/list_item_room_control.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="room"
-            type="com.caseytmorris.sparkdirector.database.RoomControl" />
+            type="com.caseytmorris.sparkdirector.RoomFB" />
         <variable
             name="clickListener"
             type="com.caseytmorris.sparkdirector.switchcontrol.RoomControlListener" />
